[package]
name = "mirrors-arch"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["rtkay123 <dev@kanjala.com>"]
description = "An ArchLinux mirrorlist retriever used by mirro-rs"
repository = "https://github.com/rtkay123/mirro-rs"
homepage = "https://github.com/rtkay123/mirro-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"], optional = true }
futures = "0.3.25"
itertools = "0.12.0"
log = "0.4.17"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["macros"] }

[features]
default = []
time = ["dep:chrono"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = [
  "--cfg",
  "docsrs"
]
