[package]
name = "mirro-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An ArchLinux mirrorlist manager with a TUI"
authors = ["rtkay123 <dev@kanjala.com>"]
keywords = ["http", "tui", "linux"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/rtkay123/mirro-rs"
homepage = "https://github.com/rtkay123/mirro-rs"
documentation = "https://github.com/rtkay123/mirro-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cfg-if = { version = "1.0.0", optional = true }
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
itertools = "0.11.0"
log = "0.4.17"
archlinux = { package = "mirrors-arch", version = "0.1.1", path = "../archlinux", features = ["time"] }
notify = { version = "6.1.1", optional = true }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.91", optional = true }
serde_yaml = { version = "0.9.16", optional = true }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros", "fs"] }
toml = { version = "0.8.8", optional = true }
tui-logger = { version = "0.10.0", features = ["crossterm"], default-features = false }
unicode-width = "0.1.10"
ratatui = { version = "0.24.0", features = ["crossterm"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2.1.0"

[features]
default = []
json = ["dep:serde_json", "dep:notify", "dep:cfg-if"]
yaml = ["dep:serde_yaml", "dep:notify", "dep:cfg-if"]
toml = ["dep:toml", "dep:notify", "dep:cfg-if"]

[build-dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
clap_mangen = "0.2.6"
serde = { version = "1.0.151", features = ["derive"] }
