[package]
name = "mirro-rs"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An ArchLinux mirrorlist manager with a TUI"
authors = ["rtkay123 <dev@kanjala.com>"]
keywords = ["http", "tui", "linux"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/rtkay123/mirro-rs"
homepage = "https://github.com/rtkay123/mirro-rs"
documentation = "https://github.com/rtkay123/mirro-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
cfg-if = { version = "1.0.0", optional = true }
clap = { version = "4.4.16", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
itertools = "0.12.0"
archlinux = { package = "mirrors-arch", version = "0.1.3", path = "../archlinux", features = ["time"] }
notify = { version = "6.1.1", optional = true }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", optional = true }
serde_yaml = { version = "0.9.30", optional = true }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "fs"] }
toml = { version = "0.8.8", optional = true }
tui-logger = { version = "0.10.0", features = ["crossterm", "tracing-support"], default-features = false }
unicode-width = "0.1.10"
ratatui = { version = "0.24.0", features = ["crossterm"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
tracing-journald = "0.3.0"

[features]
default = []
json = ["dep:serde_json", "dep:notify", "dep:cfg-if"]
yaml = ["dep:serde_yaml", "dep:notify", "dep:cfg-if"]
toml = ["dep:toml", "dep:notify", "dep:cfg-if"]

[dev-dependencies]
toml = "0.8.8"

[build-dependencies]
clap = { version = "4.4.16", features = ["derive"] }
clap_complete = "4.4.6"
clap_mangen = "0.2.17"
serde = { version = "1.0.195", features = ["derive"] }
