[package]
name = "mirro-rs"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An ArchLinux mirrorlist manager with a TUI"
authors = ["rtkay123 <dev@kanjala.com>"]
keywords = ["http", "tui", "linux"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/rtkay123/mirro-rs"
homepage = "https://github.com/rtkay123/mirro-rs"
documentation = "https://github.com/rtkay123/mirro-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.10" # https://github.com/tkaitchuck/aHash/issues/200
anyhow = "1.0.81"
cfg-if = { version = "1.0.0", optional = true }
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
itertools.workspace = true
archlinux = { package = "mirrors-arch", version = "0.1.3", path = "../archlinux", features = ["time"] }
notify = { version = "6.1.1", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde_yaml = { version = "0.9.32", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
toml = { version = "0.8.10", optional = true }
tui-logger = { version = "0.11.0", features = ["crossterm", "tracing-support"], default-features = false }
unicode-width = "0.1.11"
ratatui = { version = "0.26.1", features = ["crossterm"], default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
tracing-journald = "0.3.0"

[features]
default = []
json = ["dep:serde_json", "dep:notify", "dep:cfg-if"]
yaml = ["dep:serde_yaml", "dep:notify", "dep:cfg-if"]
toml = ["dep:toml", "dep:notify", "dep:cfg-if"]

[dev-dependencies]
toml = "0.8.10"

[build-dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap_complete = "4.5.1"
clap_mangen = "0.2.20"
serde = { workspace = true, features = ["derive"] }
